mobile design ready

--- a/index.html
+++ b/index.html
@@ -5,33 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+  <!-- STYLES -->
+  <!-- Normalize -->
+  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+  <!-- Custom Class-->
+  <link href="./style.css" rel="stylesheet">
 
+  <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <!-- END STYLES -->
 </head>
 <body>
-  “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
+  <div id="mainContainer">
+    <div id="visualContainer">
+      <div id="visual">
+        <img src="./images/image-tanya.jpg" />
+      </div>
+      <div id="slideController">
+        <img src="./images/icon-prev.svg"></svg>
+        <img src="./images/icon-next.svg"></svg>
+      </div>
+    </div>
 
-  Tanya Sinclair
-  UX Engineer
-
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
-
-  John Tarkpor
-  Junior Front-end Developer
+    <div id="messageContainer">
+      <div id="message">
+        <div id="messageText">loading...</div>
+        <div id="messageName">loading...</div>
+      </div>
+    </div>
+    <div id="footerBackground"></div>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
+
+
+
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Giovanni Ranzato</a>.
+  </footer>
 </body>
+<script src="./functions.js">
+</script>
 </html>
