--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
 
     <div id="messageContainer">
-      <div id="message">
-        <div id="messageText">loading...</div>
-        <div id="messageName">loading...</div>
+      <div id="message" >
+        <div id="messageText"></div>
+        <div id="messageName"></div>
       </div>
     </div>
   </div>
