--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <div id="mainContainer">
     <div id="visualContainer">
       <div id="visual">
-        <img id="visualImg" src="./images/image-tanya.jpg" />
+        <img id="visualImgFront" src="./images/image-tanya.jpg" />
+        <img id="visualImgBack" src="./images/image-john.jpg" />
       </div>
       <div id="slideController">
         <div class="button" onclick="switchSlide(-1)"><img src="./images/icon-prev.svg" /></div>
