Fixed html accesibility

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <div id="mainContainer">
     <div id="visualContainer">
       <div id="visual">
-        <img id="visualImgFront" src="./images/image-tanya.jpg" />
-        <img id="visualImgBack" src="./images/image-john.jpg" />
+        <img id="visualImgFront" src="./images/image-tanya.jpg" alt="testimonial"/>
+        <img id="visualImgBack" src="./images/image-john.jpg" alt="testimonial"/>
       </div>
       <div id="slideController">
-        <div class="button" onclick="switchSlide(-1)"><img src="./images/icon-prev.svg" /></div>
-        <div class="button" onclick="switchSlide(1)"><img src="./images/icon-next.svg" /></div>
+        <div class="button" onclick="switchSlide(-1)"><img src="./images/icon-prev.svg" alt="arrow back"/></div>
+        <div class="button" onclick="switchSlide(1)"><img src="./images/icon-next.svg" alt="arrow forward"/></div>
       </div>
     </div>
 
